# django-minio-backend

./: .gitignore  .pypirc  .travis.yml  CONTRIBUTE.Docker.md  CONTRIBUTE.md  Dockerfile  LICENSE  MANIFEST.in  MIGRATIONS.md  Makefile  Pipfile  README.Docker.md  README.md  create_release.py  docker-compose.develop.yml  docker-compose.yml  dump.txt  freeze_git_tag.py  manage.py  nginx.conf  pyproject.toml  release.sh  requirements.txt  setup.py  step_setup-py.bash  step_version.py  version.py
.github/workflows/: django-tests.yml  publish-to-pypi.yml  publish-to-test-pypi.yml
DjangoExampleApplication/: admin.py  apps.py  healthcheck.py  middleware.py  models.py  storages.py  tests.py
DjangoExampleApplication/assets/: COPYRIGHT
DjangoExampleApplication/migrations/: 0001_initial.py  0002_auto_20210313_1049.py  0003_genericattachment.py  0004_alter_image_image_alter_privateattachment_file_and_more.py  0005_filesystemattachment.py  0005_filesystemattachment_alter_image_image.py  0006_alter_image_image.py
DjangoExampleApplication/tests/: test_backend_implementations.py  test_image_upload.py
DjangoExampleProject/: asgi.py  settings.py  urls.py  utils.py  wsgi.py
devPlatform/: settings.py  urls.py  wsgi.py
django_minio_backend/: __init__.py  apps.py  models.py  utils.py
django_minio_backend/management/commands/: clean_orphaned_minio_files.py  initialize_buckets.py  is_minio_available.py
example_app/: Attachments  django_minio_backend  manage.py
example_app/DjangoMinioBackendTest/: settings.py  urls.py
examples/: README.md  policy_hook.example.py
examples/Attachments/: admin.py  apps.py  models.py
examples/Attachments/migrations/: 0001_initial.py  0002_image.py
minioBackend/: apps.py  models.py
tests/: Attachments  django_minio_backend
tests/DjangoMinioBackendTest/: asgi.py  settings.py  wsgi.py
